fix: dapp id text-alignment center

--- a/src/partials/application/index.scss
+++ b/src/partials/application/index.scss
@@ -143,10 +143,18 @@
       }
     }
 
-    .id-container {
-      width: 290px; 
+   /* .id-container {
       word-wrap: break-word; 
       word-break: normal;
+    }*/
+    .category {
+      width: 3vw;
+    }
+    .balance {
+      width: 5vw;
+    }
+    .download {
+      width: 5vw;
     }
   }
 
